--- a/resources/css/slider.css
+++ b/resources/css/slider.css
@@ -27,13 +27,13 @@
 	  height: 350px;
     }
 #thumbnail-preview-indicators .slides .slide-1 {
-  background-image: url(https://s3.amazonaws.com/ooomf-com-files/wdXqHcTwSTmLuKOGz92L_Landscape.jpg); 
+  background-image: url('../images/slider1.jpg');
 }
 #thumbnail-preview-indicators .slides .slide-2 {
-  background-image: url(https://s3.amazonaws.com/ooomf-com-files/tU3ptNgGSP6U2fE67Gvy_SYDNEY-162.jpg);
+  background-image: url('../images/slider2.jpg');
 }
 #thumbnail-preview-indicators .slides .slide-3 {
-  background-image: url(https://s3.amazonaws.com/ooomf-com-files/mtNrf7oxS4uSxTzMBWfQ_DSC_0043.jpg);
+  background-image: url('../images/slider3.jpg');
 }
 #thumbnail-preview-indicators .carousel-inner .item .carousel-caption {
   top: 20%;
